@@ -32,3 +32,7 @@ Added :configuration_instance parameter to :initialize.
 == 6/29/12
 
 Updates/fixes for hooked-hash.
+
+== 6/30/12
+
+Key lookup from parents is now lazy.
